????-??-?? Technology Preview 2
-------------------------------
* Previews scaling is now logarithmic (slower when zoomed).
* Previews drawing now takes advantage of multiple CPUs.
* New texture model (perpendicular displacement and thickness).
* Added clouds hardness to light.
* Version management in saved files.

2012-04-20 Technology Preview 1
-------------------------------
* First preview version.